[tool.poetry]
name = "docassist"
version = "0.1.0"
description = ""
authors = ["Akhil Anilkumar <akhil.anilkumar@cubettech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
streamlit = "^1.45.1"
openai = "^1.78.1"
pymupdf = "^1.25.5"
pillow = "^11.2.1"
python-docx = "^1.1.2"
pdf2image = "^1.17.0"
pydicom = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
